# gimirrai

./: LICENSE  README.md  poetry.toml  pygeoapi-config.yaml  pygeoapi-openapi.yml  pyproject.toml
notebooks/: klv-decoding.ipynb  pillow-heif-tests.ipynb
patches/libheif/: ignore-metadata-assigned-to-non-existing-image-error.patch
sample_data/: gimi_1_hyp_ne.tif  uk.geojson
scripts/: build_gdal.py  linux_build_libs.py  vendorize_pyisobmff.py
src/gimirrai/: heif_reader.py  reader.py
src/gimirrai/decoders/: klv.py
src/gimirrai/pygeoapi_providers/: gimi.py
src/gimirrai/static/: index.html
src/gimirrai/vendorized/: pyisobmff_version.txt
