[tool.poetry]
name = "gimirrai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gimirrai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pillow-heif = "^0.13.1"
rasterio = "^1.3.9"
pygeoapi = "^0.15.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
